Fix paratext login button content misaligned

--- a/src/SIL.XForge.Scripture/ClientApp/src/app/connect-project/connect-project.component.scss
+++ b/src/SIL.XForge.Scripture/ClientApp/src/app/connect-project/connect-project.component.scss
@@ -29,6 +29,12 @@
       color: white;
       height: 40px;
 
+      // helps style buttons with the paratext logo
+      ::ng-deep span.mdc-button__label {
+        display: flex;
+        align-items: center;
+      }
+
       .paratext-logo {
         width: 24px;
         height: 24px;
